--- a/Badminton.html
+++ b/Badminton.html
@@ -1,5 +1,5 @@
 <html>
-    <title>Badminton Racquets: Sport-a-Shop</title>
+    <title>Badminton Equipment: Sport-a-Shop</title>
 <head>
     <meta content="The Badminton Section of Sport-a-Shop. This section consists of racquets, shuttle sets and indoor rubber-soled gum shoes. All famous brands are present."></meta>
 <link href="products.css" rel="stylesheet" type="text/css">
