--- a/Badminton.html
+++ b/Badminton.html
@@ -1,7 +1,7 @@
 <html>
     <title>Badminton Equipment: Sport-a-Shop</title>
 <head>
-    <meta content="The Badminton Section of Sport-a-Shop. This section consists of racquets, shuttle sets and indoor rubber-soled gum shoes. All famous brands are present."></meta>
+    <meta name="description" content="The Badminton Section of Sport-a-Shop. This section consists of racquets, shuttle sets and indoor rubber-soled gum shoes. All famous brands are present."></meta>
 <link href="products.css" rel="stylesheet" type="text/css">
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123388435-1"></script>
 <script>
