--- a/Badminton.html
+++ b/Badminton.html
@@ -1,7 +1,13 @@
 <html>
-    <title>Badminton Equipment: Sport-a-Shop</title>
 <head>
-<meta name="description" content="The Badminton Section of Sport-a-Shop. This section consists of racquets, shuttle sets and indoor rubber-soled gum shoes. All famous brands are present."">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Badminton Equipment: Sport-a-Shop</title>
+	<meta name="description" content="The Badminton Section of Sport-a-Shop. This section consists of racquets, shuttle sets and indoor rubber-soled gum shoes. All famous brands are present." />
+	<meta name="keywords" content="Badminton Equipment,Online Sports Shop" />
+	<meta name="author" content="" />
+	<meta name="contact" content="" />
+	<meta name="robot" content="index,follow" />
 <link href="products.css" rel="stylesheet" type="text/css">
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123388435-1"></script>
 <script>
