--- a/Badminton.html
+++ b/Badminton.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="Badminton Equipment,Online Sports Shop" />
 	<meta name="author" content="" />
 	<meta name="contact" content="" />
-	<meta name="robot" content="index,follow" />
+	<meta name="robots" content="index,follow" />
 <link href="products.css" rel="stylesheet" type="text/css">
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123388435-1"></script>
 <script>
