--- a/Badminton.html
+++ b/Badminton.html
@@ -5,9 +5,9 @@
 	<title>Badminton Equipment: Sport-a-Shop</title>
 	<meta name="description" content="The Badminton Section of Sport-a-Shop. This section consists of racquets, shuttle sets and indoor rubber-soled gum shoes. All famous brands are present." />
 	<meta name="keywords" content="Badminton Equipment,Online Sports Shop" />
-	<meta name="author" content="" />
-	<meta name="contact" content="" />
-	<meta name="robots" content="index,follow" />
+	<meta name="author" content="Viraj Shah" />
+	<meta name="contact" content="virajshah1104@gmail.com" />
+	<meta name="robots" content="index,nofollow" />
 <link href="products.css" rel="stylesheet" type="text/css">
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123388435-1"></script>
 <script>
