--- a/Football.html
+++ b/Football.html
@@ -1,15 +1,22 @@
 <html>
-    <title>Football Section: Sport-a-shop </title>
 <head>
-    <meta cotnent="The Football Section of Sport-a-Shop. This section consists of footballs, studs and goalkeeper gloves along with shin guards. All famous brands are present."></meta>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>Football Section: Sport-a-shop</title>
+<meta name="description" content="The Football Section of Sport-a-Shop. This section consists of footballs, studs and goalkeeper gloves along with shin guards. All famous brands are present." />
+<meta name="keywords" content="Badminton Equipment,Online Sports Shop" />
+<meta name="author" content="Viraj Shah" />
+<meta name="contact" content="virajshah1104@gmail.com" />
+<meta name="robots" content="index,nofollow" />
 <link href="products.css" rel="stylesheet" type="text/css">
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123388435-1"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+ window.dataLayer = window.dataLayer || [];
+ function gtag(){dataLayer.push(arguments);}
+ gtag('js', new Date());
 
-  gtag('config', 'UA-123388435-1');
+
+ gtag('config', 'UA-123388435-1');
 </script>
 </head>
 <body>
