--- a/Badminton.html
+++ b/Badminton.html
@@ -29,7 +29,7 @@
 <div id ="leftside">
 <div id ="cart">
 <a href="Cart.html">
-<img id ="img1" src="https://www.materialui.co/materialIcons/maps/local_grocery_store_white_192x192.png">&nbsp&nbsp&nbsp YOUR CART</a></div>
+<img id ="img1" src="https://www.materialui.co/materialIcons/maps/local_grocery_store_white_192x192.png">YOUR CART</a></div>
 <br>
 <p class="p01">OUR PRODUCTS</p>
 <ul>
