--- a/Football.html
+++ b/Football.html
@@ -24,7 +24,7 @@
     <p hidden>football football</p>
     <p hidden>url("http://img.nowrunning.com/content/movie/2017/newto-20338/bg4.jpg?fbrefresh=120122647321")</p>
 <div id ="top">
-<center>Shop by your sport!</center>
+<h1>Shop by your sport!</h1>
 </div>
 <hr>
 <center><p style="font-size:20px;">This Is the Football Section Of an online sports shopping website where customers can buy products and accessories related to various sports.<br>Here the customer can buy football related equipments such as kits,footballs,shoes,guards and various other products.<br>The Customer can also visit the Badminton and Table Tennis section from this page.<br>He can choose to purchase products by adding them to his cart and receipt with final bill is provided once the customer has completed his transaction with the website.</p></center>
@@ -44,50 +44,50 @@
 <div id ="right"><ul class="products">
   <li class="product">
     <img src="https://images-eu.ssl-images-amazon.com/images/I/51apdVKPXXL._AC_US218_FMwebp_QL70_.jpg" />
-    <h1>P1</h1>
-     <p>1000</p>
+    <h2>P1</h2>
+     <h3>1000</h3>
 	<button class="add"><a class="addtocart">Add to cart</a></button>
   </li>
   <li class="product">
     <img src="https://images-eu.ssl-images-amazon.com/images/I/51MHBpTD8hL._AC_US218_FMwebp_QL70_.jpg" />
-    <h1>P2</h1>
-	<p>1000</p>
+    <h2>P2</h2>
+	<h3>1000</h3>
 <button class="add"><a class="addtocart">Add to cart</a></button>
   </li>
   <li class="product">
     <img src="https://images-eu.ssl-images-amazon.com/images/I/61n4vxCuT2L._AC_US218_.jpg" />
-    <h1>P3</h1>
-	<p>1000</p>
+    <h2>P3</h2>
+	<h3>1000</h3>
 <button class="add"><a class= "addtocart">Add to cart</a></button>
   </li>
   <li class="product">
     <img src="https://images-eu.ssl-images-amazon.com/images/I/51OUyCFr89L._AC_US218_.jpg" />
-    <h1>P4</h1>
-<p>1000</p>
+    <h2>P4</h2>
+<h3>1000</h3>
 <button class="add"><a class= "addtocart">Add to cart</a></button>
   </li>
   <li class="product">
     <img src="https://images-eu.ssl-images-amazon.com/images/I/41q3j-rd6YL._AC_US218_.jpg"/>
-    <h1>P5</h1>
-	<p>1000</p>
+    <h2>P5</h2>
+	<h3>1000</h3>
 	<button class="add"><a class= "addtocart">Add to cart</a></button>
   </li>
   <li class="product">
     <img src="https://images-eu.ssl-images-amazon.com/images/I/41zPoID+jSL._AC_US218_.jpg" />
-    <h1>P6</h1>
-<p>1000</p>
+    <h2>P6</h2>
+<h3>1000</h3>
 <button class="add"><a class= "addtocart">Add to cart</a></button>
   </li>
   <li class="product">
     <img src="https://images-eu.ssl-images-amazon.com/images/I/41BIwTwljVL._AC_US218_.jpg" />
-    <h1>P7</h1>
-<p>1000</p>
+    <h2>P7</h2>
+<h3>1000</h3>
 <button class="add"><a class="addtocart">Add to cart</a></button>
   </li>
   <li class="product">
     <img src="https://images-eu.ssl-images-amazon.com/images/I/414ahrJ9raL._AC_US218_.jpg" />
-    <h1>P8</h1>
-	<p>1000</p>
+    <h2>P8</h2>
+	<h3>1000</h3>
 <button class="add"><a class= "addtocart">Add to cart</a></button>
   </li>
 </ul>
