--- a/Badminton.html
+++ b/Badminton.html
@@ -19,7 +19,7 @@
 </script>
 </head>
 <body>
-<a href = "index.html"><img id ="home" src="Homebutton.png"></a>
+<a href = "index.html"><img id ="home" src="Homebutton.png">HomePage</a>
 <div id ="top">
 <h1>Shop by your sport : Badminton</h1>
 </div>
