--- a/Football.html
+++ b/Football.html
@@ -20,7 +20,7 @@
 </script>
 </head>
 <body>
-<a href = "index.html"><img id ="home" src="Homebutton.png"></a>
+<a href = "index.html"><img id ="home" src="Homebutton.png" alt="Homepage"></a>
     <p hidden>football football</p>
     <p hidden>url("http://img.nowrunning.com/content/movie/2017/newto-20338/bg4.jpg?fbrefresh=120122647321")</p>
 <div id ="top">
