--- a/Badminton.html
+++ b/Badminton.html
@@ -19,7 +19,7 @@
 </script>
 </head>
 <body>
-<a href = "index.html"><img id ="home" src="Homebutton.png">HomePage</a>
+<a href = "index.html" title = "Main page of the website."><img id ="home" src="Homebutton.png">HomePage</a>
 <div id ="top">
 <h1>Shop by your sport : Badminton</h1>
 </div>
@@ -33,9 +33,9 @@
 <br>
 <p class="p01">OUR PRODUCTS</p>
 <ul>
-<li><a href="Badminton.html">BADMINTON</a></li>
-<li><a href="TT.html">TABLE TENNIS</a></li>
-<li><a href="Football.html">FOOTBALL</a></li>
+<li><a href="Badminton.html" title="Shop for badminton products.">BADMINTON</a></li>
+<li><a href="TT.html" title="Shop for table tennis products.">TABLE TENNIS</a></li>
+<li><a href="Football.html" title="Shop for football products.">FOOTBALL</a></li>
 </ul>
 </div>
 <div id ="right"><ul class="products">
