--- a/Football.html
+++ b/Football.html
@@ -20,7 +20,7 @@
 </script>
 </head>
 <body>
-<a href = "index.html"><img id ="home" src="Homebutton.png" alt="Homepage"></a>
+<a href = "index.html" title = "Main page of the website"><img id ="home" src="Homebutton.png" alt="Homepage"></a>
     <p hidden>football football</p>
     <p hidden>url("http://img.nowrunning.com/content/movie/2017/newto-20338/bg4.jpg?fbrefresh=120122647321")</p>
 <div id ="top">
@@ -36,9 +36,9 @@
 <br>
 <p class="p01">OUR PRODUCTS</p>
 <ul>
-<li><a href="Badminton.html">BADMINTON</a></li>
-<li><a href="TT.html">TABLE TENNIS</a></li>
-<li><a href="Football.html">FOOTBALL</a></li>
+<li><a href="Badminton.html" title = "Shop for badminton products">BADMINTON</a></li>
+<li><a href="TT.html" title = "Shop for badminton products">TABLE TENNIS</a></li>
+<li><a href="Football.html" title = "Shop for badminton products">FOOTBALL</a></li>
 </ul>
 </div>
 <div id ="right"><ul class="products">
