--- a/Badminton.html
+++ b/Badminton.html
@@ -90,5 +90,9 @@
 </ul>
 </div>
 <p hidden>url("http://img.nowrunning.com/content/movie/2017/newto-20338/bg4.jpg?fbrefresh=120122647321")</p>
+
+<a href="" title="Drishti">Go to Drishti's Website</a>
+<a href="" title="Saurabh">Go to Saurabh's Website</a>
+	
 </body>
 </html>
