--- a/Football.html
+++ b/Football.html
@@ -39,6 +39,8 @@
 <li><a href="Badminton.html" title = "Shop for badminton products">BADMINTON</a></li>
 <li><a href="TT.html" title = "Shop for badminton products">TABLE TENNIS</a></li>
 <li><a href="Football.html" title = "Shop for badminton products">FOOTBALL</a></li>
+<li><a href="" title="Drishti">Go to Drishti's Website</a></li>
+<li><a href="" title="Saurabh">Go to Saurabh's Website</a></li>
 </ul>
 </div>
 <div id ="right"><ul class="products">
@@ -93,8 +95,7 @@
 </ul>
 </div>
 	
-<a href="" title="Drishti">Go to Drishti's Website</a>
-<a href="" title="Saurabh">Go to Saurabh's Website</a>
+
 	
 </body>
 </html>
