--- a/Badminton.html
+++ b/Badminton.html
@@ -36,6 +36,8 @@
 <li><a href="Badminton.html" title="Shop for badminton products.">BADMINTON</a></li>
 <li><a href="TT.html" title="Shop for table tennis products.">TABLE TENNIS</a></li>
 <li><a href="Football.html" title="Shop for football products.">FOOTBALL</a></li>
+<li><a href="" title="Drishti">Go to Drishti's Website</a></li>
+<li><a href="" title="Saurabh">Go to Saurabh's Website</a></li>
 </ul>
 </div>
 <div id ="right"><ul class="products">
@@ -91,8 +93,5 @@
 </div>
 <p hidden>url("http://img.nowrunning.com/content/movie/2017/newto-20338/bg4.jpg?fbrefresh=120122647321")</p>
 
-<a href="" title="Drishti">Go to Drishti's Website</a>
-<a href="" title="Saurabh">Go to Saurabh's Website</a>
-	
 </body>
 </html>
