--- a/Football.html
+++ b/Football.html
@@ -39,8 +39,8 @@
 <li><a href="Badminton.html" title = "Shop for badminton products">BADMINTON</a></li>
 <li><a href="TT.html" title = "Shop for badminton products">TABLE TENNIS</a></li>
 <li><a href="Football.html" title = "Shop for badminton products">FOOTBALL</a></li>
-<li><a href="" title="Drishti">Go to Drishti's Website</a></li>
-<li><a href="" title="Saurabh">Go to Saurabh's Website</a></li>
+<li><a href="https://popcornandmovies.000webhostapp.com/lll.html" title="Drishti">Go to Drishti's Website</a></li>
+<li><a href="https://shahvp.000webhostapp.com/bookmyshow/movies.php" title="Saurabh">Go to Saurabh's Website</a></li>
 </ul>
 </div>
 <div id ="right"><ul class="products">
